[package]
name = "which_cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["ParkSnoopy <117149837+ParkSnoopy@users.noreply.github.com>"]
repository = "https://github.com/ParkSnoopy/which-rs.git"
license = "MIT"
description = "A Rust equivalent of Unix command \"which\". Locate installed executable in cross platforms."
readme = "README.md"
categories = ["os", "filesystem"]
keywords = ["which", "which-rs", "unix", "command", "cli"]

[features]
regex = ["dep:regex"]
tracing = ["dep:tracing"]

[dependencies]
either = "1.9.0"
regex = { version = "1.10.2", optional = true }
tracing = { version = "0.1.40", default-features = false, optional = true }

[target.'cfg(any(windows, unix, target_os = "redox"))'.dependencies]
env_home = "0.1.0"

[target.'cfg(any(unix, target_os = "wasi", target_os = "redox"))'.dependencies]
rustix = { version = "0.38.30", default-features = false, features = ["fs", "std"] }

[target.'cfg(windows)'.dependencies]
winsafe = { version = "0.0.19", features = ["kernel"] }

[dev-dependencies]
tempfile = "3.9.0"

[package.metadata.docs.rs]
all-features = true


[[bin]]
name = "which"
path = "src/bin/main.rs"
